--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Progress Tracker – Wombak.xyz</title>
+    <meta property="og:title" content="Progress Tracker – wombak.xyz" />
+    <meta
+      property="og:description"
+      content="We're buidling something cool and want you to come along for the ride!"
+    />
+    <meta property="og:image" content="{{ URL }}/wombak-og.png" />
+    <meta property="og:image:width" content="2032" />
+    <meta property="og:image:height" content="1204" />
+    <meta property="og:url" content="{{ URL }}" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap"/>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap"
+    />
     <link rel="stylesheet" href="./styles.css" />
-    <script>history.scrollRestoration = "manual"</script>
+
+    <script>
+      history.scrollRestoration = "manual";
+    </script>
   </head>
   <body>
     <div id="app"></div>
