--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Progress Tracker – wombak.xyz</title>
     <meta property="og:title" content="Progress Tracker – wombak.xyz" />
     <meta
       property="og:description"
