--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta property="og:title" content="Progress Tracker – wombak.xyz" />
     <meta
       property="og:description"
-      content="We're buidling something cool and want you to come along for the ride!"
+      content="We're building something cool and want you to come along for the ride!"
     />
-    <meta property="og:image" content="{{ URL }}/wombak-og.png" />
-    <meta property="og:image:width" content="2032" />
-    <meta property="og:image:height" content="1204" />
+    <meta property="og:image" content="{{ URL }}/wombak-og.jpg" />
+    <meta property="og:image:width" content="1622" />
+    <meta property="og:image:height" content="1120" />
     <meta property="og:url" content="{{ URL }}" />
 
     <link rel="stylesheet" href="./styles.css" />
