Add meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Progress Tracker – wombak.xyz</title>
+    <meta
+      property="description"
+      content="We're building something cool and want you to come along for the ride!"
+    />
     <meta property="og:title" content="Progress Tracker – wombak.xyz" />
     <meta
       property="og:description"
